[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scientist Body.png" type="Texture" id=1]
[ext_resource path="res://Scientist Skin.png" type="Texture" id=2]
[ext_resource path="res://Scientist Hair 2.png" type="Texture" id=3]
[ext_resource path="res://Scientist Hair 1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/ScientistSprite.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Scientist.gd" type="Script" id=6]
[ext_resource path="res://RandomStep.tres" type="AudioStream" id=7]
[ext_resource path="res://Bar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/HitArea.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.0
height = 5.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 8 )

[node name="Scientist" type="KinematicBody2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="ScientistSprite" type="Node2D" parent="."]
position = Vector2( 0, -8 )
script = ExtResource( 5 )
frame = 23
flip_h = true

[node name="Body" type="Sprite" parent="ScientistSprite"]
texture = ExtResource( 1 )
flip_h = true
vframes = 3
hframes = 8
frame = 23

[node name="Hair" type="Sprite" parent="ScientistSprite"]
visible = false
self_modulate = Color( 0.839216, 0.580392, 0.596078, 1 )
texture = ExtResource( 4 )
flip_h = true
hframes = 5
frame = 1

[node name="Hair2" type="Sprite" parent="ScientistSprite"]
self_modulate = Color( 0.701961, 0.584314, 0.45098, 1 )
texture = ExtResource( 3 )
flip_h = true
hframes = 5
frame = 1

[node name="Skin" type="Sprite" parent="ScientistSprite"]
self_modulate = Color( 0.945098, 0.760784, 0.490196, 1 )
texture = ExtResource( 2 )
flip_h = true
vframes = 3
hframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScientistSprite"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="HitArea" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, -8 )
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -3.029
max_distance = 200.0

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
margin_left = 5.0
margin_top = 0.0
margin_right = 21.0
margin_bottom = 1.0
rect_rotation = -90.0

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true
[connection signal="hit" from="HitArea" to="." method="_on_HitArea_hit"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
